--- a/src/locales/cn/chemical_cards.json
+++ b/src/locales/cn/chemical_cards.json
@@ -72,7 +72,7 @@
 
   "Nova Foundry": "新星铸造厂",
   "Effect: Your titanium resources are worth 1 M€ extra.": "效果：你的钛资源价值+1M€。",
-  "Requires 5 science tags. Increase your titanium production 2 steps and your heat production 2 steps.": "需要5个科学标志。提升2点钛产量和2点热量产量。",
+  "Requires 5 science tags. Increase your titanium production 2 steps and your heat production 2 steps.": "需要5个科学标志。提升2点钛产量和2点热能产量。",
 
   "Kugelblitz Engine": "球状闪电引擎",
   "Effect: When you play a space card, you pay 3 M€ less for it.": "效果：当你打出一张带有太空标志的卡牌时，其费用减少3 M€。",
@@ -82,7 +82,7 @@
   "Requires 2 Jovian tags. Increase your M€ production 2 steps.": "需要2个木星标志。提升2点M€产量。",
 
   "Solar Station": "太阳能站",
-  "Requires 4 science tags. Increase your heat production 1 step and gain 3 heat.": "需要4个科学标志。提升1点热量产量并获得3点热量。",
+  "Requires 4 science tags. Increase your heat production 1 step and gain 3 heat.": "需要4个科学标志。提升1点热能产量并获得3点热能。",
 
   "Data Center": "数据中心",
   "Add 2 data to ANY card and draw 2 cards.": "在任意卡牌上添加2个数据资源并抽2张牌。",
