--- a/src/locales/cn/colonies.json
+++ b/src/locales/cn/colonies.json
@@ -1,7 +1,7 @@
 {
   "Aridor": "阿里多尔",
   "You start with 40 M€. As your first action, put an additional Colony Tile of your choice into play": "您从40 M€开始游戏。 作为您的第一个动作，请选择一个额外的殖民地板块加入游戏",
-  "Effect: When you get a new type of tag in play [event cards do not count], increase your M€ production 1 step.": "效果：当您在玩耍中获得新的卡牌标签时[事件卡不计入]，请增加M€产量1级。",
+  "Effect: When you get a new type of tag in play [event cards do not count], increase your M€ production 1 step.": "效果：当您在玩耍中获得新的卡牌标志时[事件卡不计入]，请增加M€产量1级。",
 
   "ARKLIGHT": "弧光",
   "Arklight": "弧光",
@@ -213,7 +213,7 @@
   "Titan": "土卫六",
   "Triton": "海卫一",
 
-  "Callisto - (Energy)": "木卫四-（能量）",
+  "Callisto - (Energy)": "木卫四-（电力）",
   "Ceres - (Steel)": "谷神星-（钢铁）",
   "Enceladus - (Microbes)": "土卫二-（微生物）",
   "Europa - (Production)": "木卫二-（产量）",
