--- a/src/locales/cn/pathfinder_cards.json
+++ b/src/locales/cn/pathfinder_cards.json
@@ -72,7 +72,7 @@
   "(Every player loses all energy. Raise the temperature 2 steps.)": "所有玩家失去全部电力资源。提升2级温度。",
 
   "Dyson Screens": "戴森屏",
-  "(Action: Pay 2 titanium to raise your heat and energy production 1 step each.)": "（行动：消耗2个钛，使你的电力资源和热量产能增加1。）",
+  "(Action: Pay 2 titanium to raise your heat and energy production 1 step each.)": "（行动：消耗2个钛，使你的电力资源和热能产能增加1。）",
   "(Raise the temperature 1 step. Draw a card. Place a city tile ON THE RESERVED AREA. Raise your energy and heat production 2 steps.)": "提升1级温度。抽1张牌。在预留区域放置1个城市板块。提升电力和热产能各2点。",
 
   "Early Expedition": "早期探险",
