--- a/src/locales/cn/pathfinder_corporations.json
+++ b/src/locales/cn/pathfinder_corporations.json
@@ -5,7 +5,7 @@
   "(You start with 43 M€.)": "（起始获得43M€。）",
 
   "Ambient": "Ambient",
-  "(Effect: When you play a card with a Venus tag (including this) increase your heat production 1 step.)": "（效果：当你打出一张金星牌（包括此牌）时，你的热量产能增加1。）",
+  "(Effect: When you play a card with a Venus tag (including this) increase your heat production 1 step.)": "（效果：当你打出一张金星牌（包括此牌）时，你的热能产能增加1。）",
   "(Action: When temperature is maxed, spend 8 heat gain 1 TR. You may repeat this action like a standard project.)": "（行动：当温度达到最大值时，你可以花费8点热资源提升1点改造度（该行动不限次数）。）",
   "(You start with 38 M€. As your first action, raise the Venus scale 2 steps.)": "（起始获得38M€。作为游戏中的第一个行动，提升2格金星改造度。）",
 
