--- a/src/locales/cn/preferences.json
+++ b/src/locales/cn/preferences.json
@@ -5,7 +5,7 @@
   "Hide non-blue played cards": "隐藏非蓝色打出的卡牌",
   "Hide awards and milestones": "隐藏里程碑和奖励",
   "Hide log": "隐藏游戏日志",
-  "Hide tag overview": "隐藏标签概述",
+  "Hide tag overview": "隐藏标志概述",
   "Hide corporation names for players": "隐藏玩家公司名字",
   "Hide sticky top bar": "隐藏顶部黏条",
   "Smaller cards": "小号卡牌",
