--- a/src/locales/cn/promo_cards.json
+++ b/src/locales/cn/promo_cards.json
@@ -229,7 +229,7 @@
   "Gain 3 plants.": "获得3个植物。",
 
   "Protected Growth": "受保护生长",
-  "Oxygen must be 7% or less. Gain 1 plant per power tag you have.": "需求氧气等级≤7%。你拥有的每个电力标签获得1植物",
+  "Oxygen must be 7% or less. Gain 1 plant per power tag you have.": "需求氧气等级≤7%。你拥有的每个电力标志获得1植物",
 
   "Public Baths": "公共浴场",
   "Requires 6 oceans. Gain 6 M€.": "需求6个海洋板块。获得6M€",
