--- a/src/locales/cn/standard_projects.json
+++ b/src/locales/cn/standard_projects.json
@@ -14,7 +14,7 @@
   "Air Scrapping": "气体采集",
   "Air Scrapping (Var)": "气体采集（变体）",
   "Spend 15 M€ to raise Venus 1 step.": "花费15 M€来提升金星改造度1级。",
-  "Spend 15M€, less 1M€ per Venus tag you have, to raise Venus 1 step.": "花费15 M€，每有一个金星标签减少1 M€，来提升金星改造度1级。",
+  "Spend 15M€, less 1M€ per Venus tag you have, to raise Venus 1 step.": "花费15 M€，每有一个金星标志减少1 M€，来提升金星改造度1级。",
   "max -5M€": "最多减5 M€",
   "Spend 18 M€ to place an ocean tile.": "花费18 M€来放置一个海洋板块。",
 
