--- a/src/locales/cn/starwars_cards.json
+++ b/src/locales/cn/starwars_cards.json
@@ -10,16 +10,16 @@
   "Requires that you are Chairman. The current ruling party will automatically be the ruling party during the next Solar phase, and you will remain the Chairman. (As if the current ruling party were dominant and you were its party leader.)": "需要成为主席。当前执政党将在下个时代自动连任，你保留主席职位（视为该派系保持主导地位且你为其领袖）",
 
   "Tosche Station (IV)": "托什站（IV）",
-  "Action: Spend X Energy and gain X-1 plants (max 4.)": "行动：消耗X点能量，获得X-1植物（最多4个）",
+  "Action: Spend X Energy and gain X-1 plants (max 4.)": "行动：消耗X点电力，获得X-1植物（最多4个）",
 
   "Cloud City (V)": "云城（V）",
   "Requires Venus 6%. Raise Venus 1 step. Add 2 floaters to any card.": "需求金星参数≥6%。提升1级金星改造度，向任意卡牌添加2个云资源",
 
   "Forest Moon (VI)": "森林之月（VI）",
-  "Requires any 4 greeneries on Mars. Decrease any energy production 2 steps. Add an animal to any card.": "需求火星上有4个绿化板块。降低任一玩家能量产能2级，向任意卡牌添加1个动物",
+  "Requires any 4 greeneries on Mars. Decrease any energy production 2 steps. Add an animal to any card.": "需求火星上有4个绿化板块。降低任一玩家电力产能2级，向任意卡牌添加1个动物",
 
   "Takonda Castle (VII)": "塔孔达城堡（VII）",
-  "Gain 1 M€ for each of your microbe tags and animal tags.": "你拥有的每个微生物标签和动物标签各获得1M€",
+  "Gain 1 M€ for each of your microbe tags and animal tags.": "你拥有的每个微生物标志和动物标志各获得1M€",
 
   "Tool with the First Order (VIII)": "第一秩序工具（VIII）",
   "Take another action this turn. Gain 1 TR.": "本回合执行一次额外行动，获得1TR",
