--- a/src/locales/cn/base_actions.json
+++ b/src/locales/cn/base_actions.json
@@ -1,10 +1,10 @@
 {
-  "Convert heat": "转换热量",
-  "CONVERT HEAT": "转换热量",
+  "Convert heat": "转换热能",
+  "CONVERT HEAT": "转换热能",
   "Convert Heat": "升温",
-  "Spend 8 heat to raise temperature 1 step.": "花费8热量来提升温度1级。",
-  "Convert 7 heat into temperature": "支付7热量转换为温度",
-  "Convert 8 heat into temperature": "支付8热量转换为温度",
+  "Spend 8 heat to raise temperature 1 step.": "花费8热能来提升温度1级。",
+  "Convert 7 heat into temperature": "支付7热能转换为温度",
+  "Convert 8 heat into temperature": "支付8热能转换为温度",
 
   "Convert Plants": "绿化",
   "CONVERT PLANTS": "绿化",
