--- a/src/locales/cn/base_cards.json
+++ b/src/locales/cn/base_cards.json
@@ -28,11 +28,6 @@
   "Action: Spend 1 energy to gain 1 M€ for each city tile ON MARS.": "行动：花费1电力，火星上每有1个城市，你获得1 M€。",
 
   "Capital": "首都",
-  "2 Oceans": "2海洋",
-  "3 Oceans": "3海洋",
-  "4 Oceans": "4海洋",
-  "5 Oceans": "5海洋",
-  "6 Oceans": "6海洋",
   "Requires 4 ocean tiles. Place this tile. Decrease your energy production 2 steps and increase your M€ production 5 steps.": "需要至少已放置4个海洋。放置本板块,降低你的电力产量2级,提升你的M€产量5级",
   "1 additional VP for each ocean tile adjacent to this city tile.": "该城市板块相邻每有1个海洋板块,额外获得1分",
 
@@ -63,16 +58,16 @@
   "Oxygen must be 7% or less. Gain 3 plants. Place a city tile. Decrease your energy production 1 step and increase your M€ production 3 steps.": "氧气不能多于7%,获得3个植物资源,放置一个城市板块。降低电力产量1级，提升M€产量3级",
 
   "Noctis City": "诺提斯城",
-  "(Decrease your energy production 1 step and increase your M€ production 3 steps. Place a city tile ON THE RESERVED AREA, disregarding normal placement restrictions.)": "（能量产量-1，M€产量+3。在保留区域放置一个城市，无视正常放置限制。）",
+  "(Decrease your energy production 1 step and increase your M€ production 3 steps. Place a city tile ON THE RESERVED AREA, disregarding normal placement restrictions.)": "（电力产量-1，M€产量+3。在保留区域放置一个城市，无视正常放置限制。）",
 
   "Methane From Titan": "从土卫六引入甲烷",
-  "(Requires 2% oxygen. Increase your heat production 2 steps and your plant production 2 steps.)": "（需要2%氧气。热量产量+2，植物产量+2。）",
+  "(Requires 2% oxygen. Increase your heat production 2 steps and your plant production 2 steps.)": "（需要2%氧气。热能产量+2，植物产量+2。）",
 
   "Imported Hydrogen": "注入氢气",
   "Gain 3 plants, or add 3 microbes or 2 animals to ANOTHER card. Place an ocean tile.": "获得3个植物资源，或者放置3个微生物资源或2个动物资源到另一张卡。放置一个海洋板块。",
 
   "Research Outpost": "科研前哨站",
-  "Effect: When you play a card, you pay 1 M€ less for it.": "效果： 当你打出一张卡时，少支付1 M€。",
+  "Effect: When you play a card, you pay 1 M€ less for it.": "效果：当你打出一张卡时，少支付1 M€。",
   "Place a city tile NEXT TO NO OTHER TILE.": "放置一个城市，不能和任何其他板块相邻。",
 
   "Phobos Space Haven": "福波斯(火卫一)空间港",
@@ -97,7 +92,7 @@
   "Requires -12 C or warmer. Add 1 animal TO ANY ANIMAL CARD. Gain 3 plants. Increase your M€ production 2 steps.": "需要最低-12度。放置1个动物资源到任意动物卡。获得3个植物资源，提升你的M€产量2级。",
 
   "Interstellar Colony Ship": "星际殖民飞船",
-  "Requires that you have 5 science tags.": "要求你有5个科学标签。",
+  "Requires that you have 5 science tags.": "要求你有5个科学标志。",
 
   "Security Fleet": "安保舰队",
   "Action: Spend 1 titanium to add 1 fighter resource to this card.": "行动：花费1个钛资源，放置1个战斗机资源到本卡上。",
@@ -110,22 +105,22 @@
   "Decrease your M€ production 2 steps and increase your heat production and energy production 2 steps each.": "降低你的M€产量2级并增加你的热能产量和电力产产量各2级。",
 
   "Optimal Aerobraking": "最优的空气动力制动",
-  "Effect: When you play a space event, you gain 3 M€ and 3 heat.": "效果： 当你打出同时带有空间标志和事件标志的牌时，获得3 M€和3热能资源。",
+  "Effect: When you play a space event, you gain 3 M€ and 3 heat.": "效果：当你打出同时带有空间标志和事件标志的牌时，获得3 M€和3热能资源。",
 
   "Underground City": "地下城",
   "Place a city tile. Decrease your energy production 2 steps and increase your steel production 2 steps.": "放置一个城市板块。降低你的电力产量2级并提升你的钢铁产量2级。",
 
   "Regolith Eaters": "风化层蚕食者",
-  "Action: Add 1 microbe to this card, or remove 2 microbes from this card to raise oxygen level 1 step.": "行动： 增加1个媒生物资源到本卡，或移除本卡上的2个微生物资源来提升氧气1级。",
+  "Action: Add 1 microbe to this card, or remove 2 microbes from this card to raise oxygen level 1 step.": "行动：增加1个媒生物资源到本卡，或移除本卡上的2个微生物资源来提升氧气1级。",
   "Action: Remove 2 microbes from this card to raise oxygen level 1 step.": "行动：移除此牌上的2个微生物，使氧气上升1格。",
 
   "GHG Producing Bacteria": "温室气体生产细菌",
-  "Action: Add 1 microbe to this card, or remove 2 microbes to raise temperature 1 step.": "行动： 增加1个微生物资源到本卡，或移除本卡上的2个微生物来提升火星温度1级。",
+  "Action: Add 1 microbe to this card, or remove 2 microbes to raise temperature 1 step.": "行动：增加1个微生物资源到本卡，或移除本卡上的2个微生物来提升火星温度1级。",
   "Action: Remove 2 microbes to raise temperature 1 step.": "行动：移除2个微生物，使温度上升1格。",
   "Requires 4% oxygen.": "必须至少有4%氧气。",
 
   "Ants": "蚂蚁",
-  "Action: Remove 1 microbe from any card to add 1 to this card.": "行动： 从任意的卡上移除一个微生物资源，并放置到本卡上。",
+  "Action: Remove 1 microbe from any card to add 1 to this card.": "行动：从任意的卡上移除一个微生物资源，并放置到本卡上。",
   "1 VP per 2 microbes on this card.": "在这张卡片上，每2个微生物获得 1个VP。",
 
   "Release of Inert Gases": "释放惰性气体",
@@ -135,7 +130,7 @@
   "Raise your terraforming rating 2 steps and temperature 1 step. Increase your plant production 1 step, or 4 steps if you have 3 plant tags.": "提升你的改造度(TR)2,提升火星温度1级。提升你的植物产量1级,如果你有至少3个植物标志，则提升4级。",
 
   "Rover Construction": "漫游者建设",
-  "Effect: When any city tile is placed, gain 2 M€.": "效果： 每当有城市被放置时，你获得2 M€。",
+  "Effect: When any city tile is placed, gain 2 M€.": "效果：每当有城市被放置时，你获得2 M€。",
 
   "Deimos Down": "火卫二陨落",
   "Raise temperature 3 steps and gain 4 steel. Remove up to 8 plants from any player.": "提升火星温度3级并获得4个钢铁资源。移除任一玩家最多8个植物资源。",
@@ -168,7 +163,7 @@
   "Increase your plant production 1 step.": "提升你的植物产量1级。",
 
   "Tardigrades": "缓步微生物",
-  "Action: Add 1 microbe to this card.": "行动： 增加一个微生物资源到本卡。",
+  "Action: Add 1 microbe to this card.": "行动：增加一个微生物资源到本卡。",
   "1 VP per 4 Microbes on this card.": "本卡上每有4个微生物，获得1分。",
 
   "Virus": "病毒",
@@ -197,7 +192,7 @@
   "Vesta Shipyard": "维斯塔造船厂",
 
   "Beam From A Thorium Asteroid": "钍行星射线",
-  "Requires a Jovian tag. Increase your heat production and energy production 3 steps each.": "需要1个木星标志。热量和能量产量各+3。",
+  "Requires a Jovian tag. Increase your heat production and energy production 3 steps each.": "需要1个木星标志。热能和电力产量各+3。",
 
   "Mangrove": "红树林",
   "Requires +4 C or warmer. Place a greenery tile ON AN AREA RESERVED FOR OCEAN and raise oxygen 1 step. Disregard normal placement restrictions for this.": "需要火星温度至少+4度。放置一个森林板块在原本用于放置海洋板块的地方(无视基础放置条件)。提升氧气1级。",
@@ -230,31 +225,31 @@
   "Increase your M€ production 2 steps.": "提升你的M€产量2级。",
 
   "Electro Catapult": "电磁弹射器",
-  "Action: Spend 1 plant or 1 steel to gain 7 M€.": "行动： 花费1植物资源或1钢铁资源，获得7 M€。",
+  "Action: Spend 1 plant or 1 steel to gain 7 M€.": "行动：花费1植物资源或1钢铁资源，获得7 M€。",
   "Oxygen must be 8% or less. Decrease your energy production 1 step.": "氧气必须不高于8%，降低你的电力产量1级。",
 
   "Earth Catapult": "地球发射站",
-  "Effect: When you play a card, you pay 2 M€ less for it.": "效果： 当你打牌的时候，费用减少2 M€。",
+  "Effect: When you play a card, you pay 2 M€ less for it.": "效果：当你打牌的时候，费用减少2 M€。",
 
   "Advanced Alloys": "优化合金",
   "Effect: Each titanium you have is worth 1 M€ extra.": "效果：你的钛资源价值+1 M€",
-  "Effect: Each steel you have is worth 1 M€ extra.": "你的钢铁资源价值+1 M€",
+  "Effect: Each steel you have is worth 1 M€ extra.": "效果：你的钢铁资源价值+1 M€",
 
   "Birds": "鸟",
-  "Action: Add an animal to this card.": "行动： 增加一个动物资源到本卡。",
+  "Action: Add an animal to this card.": "行动：增加一个动物资源到本卡。",
   "Requires 13% oxygen. Decrease any plant production 2 steps. 1 VP per animal on this card.": "需要至少13%氧气。降低任一玩家的植物产量2级。本卡上每有1个动物资源，获得1分。",
 
   "Mars University": "火星大学",
-  "Effect: When you play a science tag, including this, you may discard a card from hand to draw a card.": "效果： 当你打出一个科学标志,包括本牌,你可以从手牌中弃掉1张牌，然后抽1张牌。",
+  "Effect: When you play a science tag, including this, you may discard a card from hand to draw a card.": "效果：当你打出一个科学标志,包括本牌,你可以从手牌中弃掉1张牌，然后抽1张牌。",
 
   "Viral Enhancers": "病毒增强",
-  "Effect: When you play a plant, microbe, or an animal tag, including this, gain 1 plant or add 1 resource to THAT CARD.": "效果： 当你打出一个植物、微生物或动物标志时,包括本牌,获得1个植物，或增加1个对应资源到该牌。",
+  "Effect: When you play a plant, microbe, or an animal tag, including this, gain 1 plant or add 1 resource to THAT CARD.": "效果：当你打出一个植物、微生物或动物标志时,包括本牌,获得1个植物，或增加1个对应资源到该牌。",
 
   "Towing A Comet": "牵引彗星",
   "Gain 2 plants. Raise oxygen level 1 step and place an ocean tile.": "获得2个植物资源。提升1级氧气并放置一个海洋板块。",
 
   "Space Mirrors": "太空镜",
-  "Action: Spend 7 M€ to increase your energy production 1 step.": "行动： 花费7 M€，增加你的电力产量1级。",
+  "Action: Spend 7 M€ to increase your energy production 1 step.": "行动：花费7 M€，增加你的电力产量1级。",
 
   "Solar Wind Power": "太阳风",
   "Increase your energy production 1 step and gain 2 titanium.": "提升你的电力产量1级，获得2个钛资源。",
@@ -312,7 +307,7 @@
   "Requires 5 science tags. Increase your energy production 6 steps.": "需要5个科学标志。增加你的电力产量6级。",
 
   "Physics Complex": "物理中心",
-  "Action: Spend 6 energy to add a science resource to this card.": "行动： 花费6个电力资源，放置一个资源在本卡。",
+  "Action: Spend 6 energy to add a science resource to this card.": "行动：花费6个电力资源，放置一个资源在本卡。",
   "2 VP for each science resource on this card.": "本卡上每有1个资源，获得2分。",
 
   "Greenhouses": "温室",
@@ -332,16 +327,16 @@
   "Decrease your M€ production 1 step and increase your energy production 1 steps.": "降低你的M€产量1级并增加你的电力产量1级。",
 
   "Ironworks": "炼铁厂",
-  "Action: Spend 4 energy to gain 1 steel and raise oxygen 1 step.": "行动： 花费4电力资源，获得1钢铁资源和提升1级氧气。",
+  "Action: Spend 4 energy to gain 1 steel and raise oxygen 1 step.": "行动：花费4电力资源，获得1钢铁资源和提升1级氧气。",
 
   "Power Grid": "电网",
   "Increase your energy production step for each power tag you have, including this.": "每有1个电力标志，提升你的电力产量1级。",
 
   "Steelworks": "钢铁厂",
-  "Action: Spend 4 energy to gain 2 steel and increase oxygen 1 step.": "行动： 花费4个电力资源，获得2个钢铁资源和提升氧气1级。",
+  "Action: Spend 4 energy to gain 2 steel and increase oxygen 1 step.": "行动：花费4个电力资源，获得2个钢铁资源和提升氧气1级。",
 
   "Ore Processor": "矿石加工厂",
-  "Action: Spend 4 energy to gain 1 titanium and increase oxygen 1 step.": "行动： 花费4个电力资源，获得1个钛资源和提升氧气1级。",
+  "Action: Spend 4 energy to gain 1 titanium and increase oxygen 1 step.": "行动：花费4个电力资源，获得1个钛资源和提升氧气1级。",
 
   "Earth Office": "地球办公室",
   "Effect: When you play an Earth tag, you pay 3 M€ less for it.": "效果：打出地球标志牌时少支付3 M€。",
@@ -356,7 +351,7 @@
   "Requires 12% oxygen. Gain 2 plants. Place a city tile. Decrease your energy production 1 step and increase your M€ production 4 steps.": "需要氧气达到12%,获得2个植物资源，放置一个城市板块。降低你的电力产量1级并增加你的M€产量4级。",
 
   "Media Group": "媒体团队",
-  "Effect: After you play an event card, you gain 3 M€.": "效果： 每当你打出一张事件牌后，获得3 M€。",
+  "Effect: After you play an event card, you gain 3 M€.": "效果：每当你打出一张事件牌后，获得3 M€。",
 
   "Business Network": "商业网络",
   "Decrease your M€ production 1 step.": "减少你的M€产量1级。",
@@ -389,7 +384,7 @@
   "Requires 3 or less ocean tiles.": "需要不多于3个海洋板块在场。",
 
   "Urbanized Area": "城市化区域",
-  "Decrease your energy production 1 step and increase your M€ production 2 steps. Place a city tile ADJACENT TO AT LEAST 2 OTHER CITY TILES.": "能量产量-1，M€产量+2。将城市放置在至少邻接2座城市的位置。",
+  "Decrease your energy production 1 step and increase your M€ production 2 steps. Place a city tile ADJACENT TO AT LEAST 2 OTHER CITY TILES.": "电力产量-1，M€产量+2。将城市放置在至少邻接2座城市的位置。",
 
   "Sabotage": "蓄意破坏",
   "Remove up to 3 titanium from any player, or 4 steel, or 7 M€.": "移除任一玩家的最多3个钛资源,或4个钢铁资源，或7 M€。",
@@ -426,7 +421,7 @@
   "Requires 4% oxygen. Increase your plant production 1 step for every 2 microbe tags you have, including this.": "需要至少4%氧气。每有2个微生物标志(包括本牌)，增加你的植物产量1级。",
 
   "Decomposers": "分解者",
-  "Effect: When you play an animal, plant, or microbe tag, including this, add a microbe to this card.": "效果： 当你打出动物、植物或微生物标志(包括本牌)时，增加一个微生物资源到本牌。",
+  "Effect: When you play an animal, plant, or microbe tag, including this, add a microbe to this card.": "效果：当你打出动物、植物或微生物标志(包括本牌)时，增加一个微生物资源到本牌。",
   "Requires 3% oxygen.": "需要3%氧气。",
   "1 VP per 3 microbes on this card.": "本牌上每有3个微生物资源，获得1分。",
 
@@ -434,7 +429,7 @@
   "Requires 2 power tags. Increase your energy production 3 steps.": "需要至少2个电力标志。增加你的电力产量3级。",
 
   "Symbiotic Fungus": "共生真菌",
-  "Action: Add a microbe to ANOTHER card.": "行动： 增加一个微生物资源到其它的牌。",
+  "Action: Add a microbe to ANOTHER card.": "行动：增加一个微生物资源到其它的牌。",
   "Requires -14 C° or warmer.": "需要温度-14°C或更高。",
 
   "Extreme-Cold Fungus": "极寒真菌",
@@ -447,7 +442,7 @@
   "Requires a plant tag, a microbe tag, and an animal tag.": "需要1个植物标志，1个微生物标志和1个动物标志。",
 
   "Great Dam": "大坝",
-  "Requires 4 ocean tiles. Increase your energy production 2 steps.": "需要4片海洋。能量产量+2。",
+  "Requires 4 ocean tiles. Increase your energy production 2 steps.": "需要4片海洋。电力产量+2。",
 
   "Cartel": "同业联盟",
   "Increase your M€ production 1 step for each Earth tag you have, including this.": "你每有1个地球标志(包括本牌)，增加你的M€产量1级。",
@@ -464,7 +459,7 @@
   "Power Plant": "发电厂",
 
   "Mohole Area": "莫霍面",
-  "Increase your heat production 4 steps. Place this tile ON AN AREA RESERVED FOR OCEAN.": "热量产量+4。将此地块放在海洋预留区。",
+  "Increase your heat production 4 steps. Place this tile ON AN AREA RESERVED FOR OCEAN.": "热能产量+4。将此地块放在海洋预留区。",
 
   "Large Convoy": "大型护航队",
   "Place an ocean tile and draw 2 cards. Gain 5 plants or add 4 animals to ANOTHER card.": "放置一个海洋板块并抽2张牌。获得5个植物资源，或放置4个动物资源到其它牌。",
@@ -478,7 +473,7 @@
   "Requires 3 ocean tiles and that you lose 2 plants. Increase your plant production 2 steps.": "需要3个海洋板块且你移除2个植物资源。增加你的植物产量2级。",
 
   "Herbivores": "食草动物",
-  "Effect: When you place a greenery tile, add an animal to this card.": "效果： 当你放置一个森林板块时，放置一个动物资源到本牌。",
+  "Effect: When you place a greenery tile, add an animal to this card.": "效果：当你放置一个森林板块时，放置一个动物资源到本牌。",
   "Requires 8% oxygen. +1 animal to this card. -1 any plant production": "需要8%氧气。本牌获得1动物。降低任一玩家的植物产量1级。",
 
   "Insects": "昆虫",
@@ -498,20 +493,20 @@
 
   "Adaptation Technology": "适应性技术",
   "Global requirements": "全球需求",
-  "Effect: Your global requirements are +2 or -2 steps, your choice in each case.": "效果： 你打出牌时对全球改造需求+2或-2级。",
+  "Effect: Your global requirements are +2 or -2 steps, your choice in each case.": "效果：你打出牌时对全球改造需求+2或-2级。",
 
   "Caretaker Contract": "监护合约",
-  "Action: Spend 8 heat to increase your terraform rating 1 step.": "行动： 花费8个热能资源，增加你的改造度(TR) 1级。",
+  "Action: Spend 8 heat to increase your terraform rating 1 step.": "行动：花费8个热能资源，增加你的改造度(TR) 1级。",
   "Requires 0° C or warmer.": "需要火星温度至少0度。",
 
   "Designed Microorganisms": "创造微生物",
   "It must be -14 C or colder. Increase your plant production 2 steps.": "火星温度不高于-14度。增加你的植物产量2级。",
 
   "Standard Technology": "标准技术",
-  "Effect: After you pay for a standard project, except selling patents, you gain 3 M€.": "效果： 当你执行标准行动后(不包括出售手牌)，你获得3 M€。",
+  "Effect: After you pay for a standard project, except selling patents, you gain 3 M€.": "效果：当你执行标准行动后(不包括出售手牌)，你获得3 M€。",
 
   "Nitrite Reducing Bacteria": "亚硝酸盐还原菌",
-  "Action: Add 1 microbe to this card, or remove 3 microbes to increase your TR 1 step.": "行动： 放置1个微生物资源到本牌，或移除3个微生物资源来提升你的改造度(TR) 1级。",
+  "Action: Add 1 microbe to this card, or remove 3 microbes to increase your TR 1 step.": "行动：放置1个微生物资源到本牌，或移除3个微生物资源来提升你的改造度(TR) 1级。",
   "Action: Remove 3 microbes to increase your TR 1 step.": "行动：移除3个微生物，地球化等级+1。",
   "Add 3 microbes to this card.": "放置3个微生物到本牌。",
   "Remove 3 microbes to increase your terraform rating 1 step": "移除3个微生物，地球化等级+1。",
@@ -541,7 +536,7 @@
   "Increase your heat production 1 step.": "热能产量+1。",
 
   "Magnetic Field Generators": "磁场发生器",
-  "Decrease your energy production 4 steps and increase your plant production 2 steps. Raise your TR 3 steps.": "能量产量-4，植物产量+2。地球化等级+3。",
+  "Decrease your energy production 4 steps and increase your plant production 2 steps. Raise your TR 3 steps.": "电力产量-4，植物产量+2。地球化等级+3。",
 
   "Shuttles": "穿梭机",
   "Requires 5% oxygen. Decrease your energy production 1 step and increase your M€ production 2 steps.": "（需求：氧气≥5％）电力产量-1 M€产量+2。",
@@ -556,7 +551,7 @@
   "Requires -6° C or warmer. Increase your plant production 1 step and your M€ production 2 steps. Gain 1 plant.": "需要温度-6°C或更高。植物产量+1，M€产量+2。获得1植物。",
 
   "Aerobraked Ammonia Asteroid": "氮气小行星",
-  "Increase your heat production 3 steps and your plant production 1 step. Add 2 microbes to ANOTHER card.": "热量产量+3，植物产量+1。为另一张牌添加2个微生物。",
+  "Increase your heat production 3 steps and your plant production 1 step. Add 2 microbes to ANOTHER card.": "热能产量+3，植物产量+1。为另一张牌添加2个微生物。",
 
   "Magnetic Field Dome": "磁力区域圆顶",
   "Decrease your energy production 2 steps and increase your plant production 1 step. Raise your TR 1 step.": "电力产量-2 植物产量+1 改造度+1。",
@@ -606,7 +601,7 @@
   "Livestock": "畜牧",
   "Requires 9% oxygen. Decrease your plant production 1 step and increase your M€ production 2 steps": "需要9%氧气。植物产量-1，M€产量+2。",
 
-  "Olympus Conference": "奥林巴斯峰会",
+  "Olympus Conference": "奥林匹斯峰会",
   "When you play a science tag, including this, either add a science resource to this card, or remove a science resource from this card to draw a card.": "效果：每当你打出一个科学标志（包括此牌的）时可选择在此牌上增加一枚科技资源或花费此牌上的一枚科技资源来抽取一张牌。",
 
   "Rad-Suits": "镭射服",
@@ -637,7 +632,7 @@
   "Action: Spend any amount of energy and gain that amount of M€.": "花费任意数量电力资源，获得等量的M€。",
 
   "Indentured Workers": "合同工",
-  "The next card you play this generation costs 8 M€ less.": "本回合你打出下一张卡牌所需支付的费用减少8。",
+  "The next card you play this generation costs 8 M€ less.": "本时代你打出的下一张牌减少8 M€的费用。",
 
   "Lagrange Observatory": "拉格朗日观察点",
   "Draw 1 card.": "抽取一张牌。",
@@ -663,7 +658,7 @@
   "Decrease any energy production 1 step and increase your own 1 step.": "任一玩家电力产量-1 你的电力产量+1。",
 
   "Underground Detonations": "地下爆破",
-  "Action: Spend 10M€ to increase your heat production 2 steps.": "行动：花费10枚M€资源 热能产量+2。",
+  "Action: Spend 10M€ to increase your heat production 2 steps.": "行动：支付10 M€，将你的热能产量提高2级。",
 
   "Soletta": "索莱塔",
   "Increase your heat production 7 steps.": "热能产量+7。",
@@ -675,20 +670,27 @@
   "Decrease your energy production 1 step. Raise your TR 2 steps.": "电力产量-1 改造度+2。",
 
   "Special Design": "特别构思",
-  "The next card you play this generation is +2 or -2 steps in global requirements, your choice.": "你可对本回合将要打出的下一张卡牌的全球参数需求进行+2级或-2级调整。",
+  "The next card you play this generation is +2 or -2 steps in global requirements, your choice.": "你可对本时代将要打出的下一张卡牌的全球参数需求进行+2级或-2级调整。",
 
   "Medical Lab": "医疗实验室",
   "Increase your M€ production 1 step for every 2 building tags you have, including this.": "每两个建筑标志可以提升一点M€产量（包括此牌）向下取整。",
 
   "AI Central": "人工智能核心",
-
+  "Requires 3 science tags to play. Decrease your energy production 1 step.": "（需求：科技图标数≥3）电力产量-1。",
   "Action: Draw 2 cards.": "行动：抽取两张牌。",
+
   "2 Science": "2 科学标志",
   "3 Science": "3 科学标志",
+  "4 Science": "4 科学标志",
   "5 Science": "5 科学标志",
-  "Effect: Draw 2 cards.": "效果：抽2张牌。",
+  "6 Science": "6 科学标志",
+  "7 Science": "7 科学标志",
 
-  "Requires 3 science tags to play. Decrease your energy production 1 step.": "（需求：科技图标数≥3）电力产量-1。",
+  "2 Oceans": "2海洋",
+  "3 Oceans": "3海洋",
+  "4 Oceans": "4海洋",
+  "5 Oceans": "5海洋",
+  "6 Oceans": "6海洋",
 
   "HYDROGEN TO VENUS": "输送氢气到金星",
 
@@ -696,18 +698,16 @@
   "Jovian": "木星",
   "max 3 Oceans": "最多3块海洋",
   "Forest": "森林",
-  "2 Power": "2 能量",
-  "7 Science": "7 科技",
+  "2 Power": "2 电力",
   "Titanium production": "钛产量",
   "Steel production": "钢铁产量",
-  "4 Science": "4 科技",
   "2 Cities": "2 座城市",
   "Standard projects": "标准项目",
 
   "Requires 2 Earth tags. Increase M€ production 4 steps.": "需要2个地球标志。M€产量+4。",
   "Oxygen must be 4% or lower. Draw two cards.": "氧气必须为4%或更低。抽2张牌。",
   "After being played, when you perform an action, the wild tag counts as any tag of your choice.": "打出后，在你执行行动时，万能标志视为任意你选择的标志。",
-  "Decrease your energy production 1 step and increase your M€ production 2 steps. Place a city tile on a VOLCANIC AREA regardless of adjacent cities.": "能量产量-1，M€产量+2。将城市放置在火山区域，无视相邻城市要求。",
+  "Decrease your energy production 1 step and increase your M€ production 2 steps. Place a city tile on a VOLCANIC AREA regardless of adjacent cities.": "电力产量-1，M€产量+2。将城市放置在火山区域，无视相邻城市要求。",
   "Effect: When paying for a plant card, microbes here may be used as 2 M€ each.": "效果：支付植物牌时，此处的微生物每个可视为2 M€。",
   "Temperature must be -20 C or lower.": "温度必须为-20°C或更低。",
   "Increase your energy production 1 step": "提升1点电力产量",
