--- a/src/locales/cn/base_corporations.json
+++ b/src/locales/cn/base_corporations.json
@@ -19,7 +19,7 @@
   "Helion": "海利昂",
   "helion": "海利昂",
   "You start with 3 heat production and 42 M€.": "起始获得42 M€，提升热能产量3级。",
-  "Effect: You may use heat as M€. You may not use M€ as heat.": "效果：你可以用热能资源代替M€使用，但不用用M€代替热能资源使用。",
+  "Effect: You may use heat as M€. You may not use M€ as heat.": "效果：你可以用热能资源代替M€使用，但不能用M€代替热能资源使用。",
 
   "INTERPLANETARY": "星际",
   "CINEMATICS": "影音",
