--- a/src/locales/cn/game_end.json
+++ b/src/locales/cn/game_end.json
@@ -5,7 +5,7 @@
   "Also, take into account these small hints to win:": "另外，请考虑以下小技巧以取胜：",
   "Concentrate more on Global parameters, not on Victory Points": "更多地关注全球参数，而不是得分",
   "Don't be greedy with card selection": "不要贪图卡牌选择",
-  "Try to increase heat production, not Megacredits": "尝试增加热量产量，而不是M€",
+  "Try to increase heat production, not Megacredits": "尝试增加热能产量，而不是M€",
   "Try starting with the Beginner corporation": "尝试用新手公司开始游戏",
 
   "You win!": "你赢了！",
