feat: 添加公司卡牌 RB-CORP-15 与 RB-CORP-16 - PhoboLog 与 Palladin Shipping 重平衡版
基于原版公司 PhoboLog 与 Palladin Shipping 进行数值与效果重构，具体改动如下：

- RB-CORP-15 - PhoboLog Rebalanced：初始资源由 23 M€ + 10 钛 修改为 30 M€ + 8 钛。
- RB-CORP-16 - Palladin Shipping Rebalanced：效果修改为「当任意玩家打出太空事件牌时，获得 1 个钛资源」。

--- a/src/locales/cn/rebalanced_corporations.json
+++ b/src/locales/cn/rebalanced_corporations.json
@@ -104,5 +104,17 @@
   "MINING_GUILD_REBALANCED": "MINING_GUILD",
   "Mining Guild Rebalanced": "Mining Guild",
   "MINING GUILD REBALANCED": "MINING GUILD",
-  "Effect: STEEL MAY BE USED for the CITY STANDARD PROJECT as if you were playing a building card.": "效果：钢铁资源可用于城市标准项目。"
+  "Effect: STEEL MAY BE USED for the CITY STANDARD PROJECT as if you were playing a building card.": "效果：钢铁资源可用于城市标准项目。",
+
+  "Phobolog_Rebalanced": "Phobolog",
+  "PHOBOLOG_REBALANCED": "PHOBOLOG",
+  "Phobolog Rebalanced": "Phobolog",
+  "PHOBOLOG REBALANCED": "PHOBOLOG",
+  "You start with 8 titanium and 30 M€.": "起始获得30 M€和8个钛资源。",
+
+  "Palladin_Shipping_Rebalanced": "Palladin_Shipping",
+  "PALLADIN_SHIPPING_REBALANCED": "PALLADIN_SHIPPING",
+  "Palladin Shipping Rebalanced": "Palladin Shipping",
+  "PALLADIN SHIPPING REBALANCED": "PALLADIN SHIPPING",
+  "Effect: When any player plays a space event, gain 1 titanium.": "效果：当任意玩家打出太空事件牌时，获得1个钛资源。"
 }
