--- a/src/locales/cn/base_corporations.json
+++ b/src/locales/cn/base_corporations.json
@@ -33,9 +33,9 @@
   "Effect: Your temperature, oxygen, ocean, and Venus requirements are +2 or -2 steps, your choice in each case.": "效果：你打牌时的 温度/氧气/海洋/金星 要求 +2级或-2级。",
   "Draw 3 cards": "抽三张牌",
 
-  "PhoboLog": "火卫一日志",
-  "Phobolog": "火卫一日志",
-  "PHOBOLOG": "火卫一日志",
+  "PhoboLog": "火卫一科技",
+  "Phobolog": "火卫一科技",
+  "PHOBOLOG": "火卫一科技",
   "You start with 10 titanium and 23 M€.": "起始获得23 M€和10个钛资源。",
   "Effect: Your titanium resources are each worth 1 M€ extra.": "效果：你的钛资源价值额外+1。",
 
