--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -127,7 +127,7 @@
   "Minimalist": "极简主义者",
   "Have no more than 2 cards in hand": "手牌不超过2张",
   "Networker": "网络大亨",
-  "Have placed 3 tiles adjacent to tiles that grant adjacency bonuses": "放置3个获得过邻接奖励的板块",
+  "Have placed 3 tiles adjacent to tiles that grant adjacency bonuses": "放置3个获得过相邻收益的板块",
   "One Giant Step": "人类一大步",
   "Have 6 moon tags": "拥有6个月球标志",
   "Pioneer": "先驱者",
