feat: 添加公司卡牌 RB-CORP-17 与 RB-CORP-18 - Tharsis Republic 与 Stormcraft Incorporated 重平衡版
基于原版公司 Tharsis Republic 与 Stormcraft Incorporated 进行数值与效果重构，具体改动如下：

- RB-CORP-17 - Tharsis Republic Rebalanced：效果修改为「每当有城市板块被放置时，提升你的 M€ 产量 1 级。每当你放置一个城市板块时，获得 3 M€」。
- RB-CORP-18 - Stormcraft Incorporated Rebalanced：行动修改为「行动：在 1 或 2 张不同的卡牌上各放置 1 个云资源」，并补全对可用热力与支付逻辑的支持。

此外：
- 在 `CardCorporationLogo.vue` 中添加对两个重平衡版本的标识支持；
- 在 `PaymentWidgetMixin.ts` 与 `Player.ts` 中扩展可用热力计算逻辑；
- 在 `LocalHeatTrapping.ts` 中修复浮游资源检查逻辑以支持新版本；
- 在 `CardName.ts`、`RebalancedCardManifest.ts`、本地化文件中注册新公司卡牌；
- 完善中文文案及翻译，保持一致性。

--- a/src/locales/cn/rebalanced_corporations.json
+++ b/src/locales/cn/rebalanced_corporations.json
@@ -116,5 +116,19 @@
   "PALLADIN_SHIPPING_REBALANCED": "PALLADIN_SHIPPING",
   "Palladin Shipping Rebalanced": "Palladin Shipping",
   "PALLADIN SHIPPING REBALANCED": "PALLADIN SHIPPING",
-  "Effect: When any player plays a space event, gain 1 titanium.": "效果：当任意玩家打出太空事件牌时，获得1个钛资源。"
+  "Effect: When any player plays a space event, gain 1 titanium.": "效果：当任意玩家打出太空事件牌时，获得1个钛资源。",
+
+  "Tharsis_Republic_Rebalanced": "Tharsis_Republic",
+  "THARSIS_REPUBLIC_REBALANCED": "THARSIS_REPUBLIC",
+  "Tharsis Republic Rebalanced": "Tharsis Republic",
+  "THARSIS REPUBLIC REBALANCED": "THARSIS REPUBLIC",
+  "Effect: When any city tile is placed, increase your M€ production 1 step. When you place a city tile, gain 3 M€.": "效果：每当有城市板块被放置时，提升你的M€产量1级。每当你放置一个城市板块时，获得3 M€。",
+
+  "Stormcraft_Incorporated_Rebalanced": "Stormcraft_Incorporated",
+  "STORMCRAFT_INCORPORATED_REBALANCED": "STORMCRAFT_INCORPORATED",
+  "Stormcraft Incorporated Rebalanced": "Stormcraft Incorporated",
+  "STORMCRAFT INCORPORATED REBALANCED": "STORMCRAFT INCORPORATED",
+  "Action: Add a floater each to 1 or 2 different cards.": "行动：在1或2张不同的卡牌上各放置1个云资源。",
+  "Select 2 cards to place 1 floater on each": "选择 2 张卡牌，各放置 1 个云资源",
+  "Place": "放置"
 }
