--- a/src/locales/cn/base_corporations.json
+++ b/src/locales/cn/base_corporations.json
@@ -7,7 +7,6 @@
   "CREDICOR": "信誉债权",
   "You start with 57 M€.": "起始获得57 M€。",
   "Effect: After you pay for a card or standard project with a basic cost of 20M€ or more, you gain 4 M€.": "效果：当你打出一张20 M€以上的卡,或执行一个20 M€以上的标准行动时，你获得4 M€。",
-  "Action: Use a blue card action that has already been used this generation": "行动：执行一次本时代已经使用过的蓝卡行动。",
 
   "ECOLINE": "生态路线",
   "ecoline": "生态路线",
@@ -43,8 +42,7 @@
   "REPUBLIC": "共和国",
   "Tharsis Republic": "塔西斯共和国",
   "You start with 40 M€. As your first action in the game, place a city tile.": "起始获得40 M€。作为你的第一个行动，放置一个城市板块。",
-  "Effect: When any city tile is placed ON MARS, increase your M€ production 1 step. When you place a city tile, gain 3 M€.": "效果：每当一个城市板块放置到火星上,提升你的M€产量1级。每当你放置一个城市板块，获得3 M€。",
-  "You start with 1 titanium production, and 38 M€.": "起始获得38 M€，提升钛产量1级。",
+  "Effect: When any city tile is placed ON MARS, increase your M€ production 1 step. When you place a city tile, gain 3 M€.": "效果：每当一个城市板块放置到火星上，提升你的M€产量1级。每当你放置一个城市板块，获得3 M€。",
 
   "THORGATE": "雷神之门",
   "Thorgate": "雷神之门",
@@ -66,8 +64,6 @@
   "Mining Guild": "矿业协会",
   "You start with 30 M€, 5 steel and 1 steel production.": "起始获得30 M€,5个钢铁资源，提升钢铁产量1级。",
   "Effect: Each time you place a tile on an area with a steel or titanium placement bonus, increase your steel production 1 step": "效果：每当你因放置一个板块而获得钢铁资源或钛资源时，提升你的钢铁产量1级。",
-  "You start with 40 M€. As your first action add a colony tile.": "起始获得40 M€。作为你的第一个行动，将一个殖民地板块加入游戏。",
-  "Effect: When you get a new type of tag in play (event cards do not count), increase your M€ production 1 step.": "当你获得一个新的标志时(不计算事件卡)，提升你的M€产量1级。",
 
   "TERACTOR": "泰拉引力",
   "Teractor": "泰拉引力",
