--- a/src/locales/cn/colonies.json
+++ b/src/locales/cn/colonies.json
@@ -1,7 +1,7 @@
 {
   "Aridor": "阿里多尔",
-  "You start with 40 M€. As your first action, put an additional Colony Tile of your choice into play": "您从40 M€开始游戏。 作为您的第一个动作，请选择一个额外的殖民地板块加入游戏",
-  "Effect: When you get a new type of tag in play [event cards do not count], increase your M€ production 1 step.": "效果：当您在玩耍中获得新的卡牌标志时[事件卡不计入]，请增加M€产量1级。",
+  "You start with 40 M€. As your first action, put an additional Colony Tile of your choice into play": "起始获得40 M€。作为你的第一个行动，将一个额外的殖民地板块加入游戏",
+  "Effect: When you get a new type of tag in play [event cards do not count], increase your M€ production 1 step.": "效果：当你获得一个新的标志时(不计算事件卡)，提升你的M€产量1级。",
 
   "ARKLIGHT": "弧光",
   "Arklight": "弧光",
