--- a/src/locales/cn/colonies.json
+++ b/src/locales/cn/colonies.json
@@ -5,7 +5,7 @@
 
   "ARKLIGHT": "弧光",
   "Arklight": "弧光",
-  "You start with 45 M€. Increase your M€ production 2 steps. 1 VP per 2 animals on this card.": "你起始获得45 M€。提升你的M€产量2级。牌上每2个动物资源1分",
+  "You start with 45 M€. Increase your M€ production 2 steps. 1 VP per 2 animals on this card.": "起始获得45 M€。提升你的M€产量2级。牌上每2个动物资源1分",
   "Effect: When you play an animal or plant tag, including this, add 1 animal to this card.": "效果：当你打出1个动物标志或植物标志(包括本牌)时，增加1个动物资源到本卡。",
 
   "POLYPHEMOS": "波呂斐摩斯",
