--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -741,7 +741,7 @@
   "Add resource to card Decomposers": "向「分解者」卡添加资源",
   "Add resource to card Nitrite Reducing Bacteria": "向「亚硝酸盐还原菌」卡添加资源",
   "Add resource to card Bioengineering Enclosure": "向「生物工程围场」卡添加资源",
-  "Add resource to card Tardigrades": "向「缓步动物」卡添加资源",
+  "Add resource to card Tardigrades": "向「缓步微生物」卡添加资源",
   "Add resource to card Regolith Eaters": "向「风化层蚕食者」卡添加资源",
   "Add resource to card Darkside Incubation Plant": "向「暗面培育设施」卡添加资源",
   "Add resource to card Sub-zero Salt Fish": "向「零下盐鱼」卡添加资源",
@@ -751,7 +751,7 @@
   "Add resource to card Ecological Zone": "向「生态区」卡添加资源",
   "Add resource to card Ecological Zone:ares": "向「生态区（阿瑞斯）」卡添加资源",
   "Add resource to card Herbivores": "向「食草动物」卡添加资源",
-  "Add resource to card Livestock": "向「牲畜」卡添加资源",
+  "Add resource to card Livestock": "向「畜牧」卡添加资源",
   "Select how to pay ${0} for colony trade": "选择如何支付 ${0} M€ 的殖民地贸易",
   "increase M€ production 1 step": "增加 M€ 产能 1级",
   "Increase your M€ production 5 steps": "提升你的 M€ 产能 5 级",
