--- a/src/locales/cn/base_corporations.json
+++ b/src/locales/cn/base_corporations.json
@@ -11,7 +11,7 @@
   "ECOLINE": "生态路线",
   "ecoline": "生态路线",
   "EcoLine": "生态路线",
-  "You start with 2 plant production, 3 plants, and 36 M€.": "起始获得36 M€,提升植物产量2级，获得3个植物资源。",
+  "You start with 2 plant production, 3 plants, and 36 M€.": "起始获得36 M€，提升植物产量2级，获得3个植物资源。",
   "Effect: You may always pay 7 plants, instead of 8, to place greenery.": "效果：你可以用7个植物资源(而不是8)来放置一个森林板块。",
 
   "HELION": "海利昂",
@@ -47,7 +47,7 @@
   "THORGATE": "雷神之门",
   "Thorgate": "雷神之门",
   "You start with 1 energy production and 48 M€.": "起始获得48 M€，提升电力产量1级。",
-  "Effect: When playing a power card OR THE STANDARD PROJECT POWER PLANT, you pay 3 M€ less for it.": "效果：每当你打出带有电力标志,或执行标准行动中建立发电厂行动时，均可少支付3 M€。",
+  "Effect: When playing a power card OR THE STANDARD PROJECT POWER PLANT, you pay 3 M€ less for it.": "效果：每当你打出带有电力标志，或执行标准行动中建立发电厂行动时，均可少支付3 M€。",
 
   "UNITED": "联合",
   "NATIONS": "国",
@@ -62,7 +62,7 @@
   "MINING": "矿业",
   "GUILD": "协会",
   "Mining Guild": "矿业协会",
-  "You start with 30 M€, 5 steel and 1 steel production.": "起始获得30 M€,5个钢铁资源，提升钢铁产量1级。",
+  "You start with 30 M€, 5 steel and 1 steel production.": "起始获得30 M€，5个钢铁资源，提升钢铁产量1级。",
   "Effect: Each time you place a tile on an area with a steel or titanium placement bonus, increase your steel production 1 step": "效果：每当你因放置一个板块而获得钢铁资源或钛资源时，提升你的钢铁产量1级。",
 
   "TERACTOR": "泰拉引力",
@@ -73,6 +73,6 @@
   "SATURN": "木星",
   "SYSTEMS": "系统",
   "Saturn Systems": "木星系统",
-  "You start with 1 titanium production and 42 M€.": "你起始获得42 M€和提升钛产量1级。",
+  "You start with 1 titanium production and 42 M€.": "起始获得42 M€和提升钛产量1级。",
   "Effect: Each time any Jovian tag is put into play, including this, increase your M€ production 1 step.": "效果：每次当有木星标志牌被打出时(包括本牌)，提升你的M€产量1级。"
 }
