--- a/src/locales/cn/venus_next_corporations.json
+++ b/src/locales/cn/venus_next_corporations.json
@@ -14,7 +14,7 @@
   "MA": "马",
   "NUTECH": "努科技",
   "Manutech": "马努科技",
-  "You start with 1 steel production, and 35 M€.": "你起始时拥有35 M€及1点钢铁产量。",
+  "You start with 1 steel production, and 35 M€.": "起始获得35 M€及1点钢铁产量。",
   "Effect: For each step you increase the production of a resource, including this, you also gain that resource.": "效果：包括本牌在内，每当你提升1点标准资源产量，获得1个对应资源。",
 
   "Morning Star Inc.": "晨星公司",
