feat: 添加公司卡牌 MY-CORP-12 - Flowing Cloud
新增公司 Flowing Cloud，起始资金 48 M€，拥有以下效果：

- 首次行动：抽一张云载体卡牌（FLOATER）
- 行动：从一张云载体牌上移动任意数量的云到另一张云载体牌上
- 如果移动后两张牌上的云数量相同，则在这两张牌上各放置 1 个云资源

--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -76,5 +76,12 @@
   "${0} used ${1} action (via ${2})": "${0} 执行了 ${1} 行动（来自 ${2} 效果）",
   "immediately use ${0} action (without spending it)": "立即使用 ${0} 的行动（不消耗次数）",
   "use": "使用",
-  "skip": "跳过"
+  "skip": "跳过",
+
+  "Flowing Cloud": "流云",
+  "FLOWING CLOUD": "流云",
+  "You start with 48 M€. As your first action, draw a floater card.": "起始获得48M€。作为第一个行动，抽一张云载体牌。",
+  "Action: Move any number of floater resources from one floater card to another.": "行动：将任意数量的云从一张云载体牌移动到另一张云载体牌上。",
+  "If the two cards have the same number of floater resources after moving, place 1 floater resource on each of these two cards.": "如果移动后两张牌上的云数量相同，则在这两张牌上各放置1个云。",
+  "equal": "相等"
 }
