feat: 更新公司与事件卡牌数值并优化资源文件
- **重工信条（Heavyworks Creed）**
  - 起始资金从 30 M€ 调整为 36 M€
  - 移除初始工人资源，起始仅获得 36 M€ 与 10 钢铁
  - 更新描述与渲染数据
  - 优化支付≥2钢铁时添加工人的逻辑

- **加班（Overtime）**
  - 成本从 4 M€ 调整为 0 M€
  - 新增 -1 胜利点

- **资源文件**
  - 更新 `coastal-resort-board-tile.png` 与 `coastal-resort-tile.png`
  - 更新 `corp-logo-flowing-cloud.png`

- **其他**
  - 更新游戏默认模板

--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -46,7 +46,7 @@
 
   "Heavyworks Creed": "重工信条",
   "HEAVYWORKS CREED": "重工信条",
-  "You start with 10 steel and 1 worker.": "起始获得10钢铁和1个工人。",
+  "You start with 36 M€ and 10 steel.": "起始获得36M€和10个钢铁。",
   "Effect: When you play a project card and pay 2 or more steel, place 1 worker on this card.": "效果：当你打出项目卡且支付≥2钢铁时，在此卡上放置1个工人。",
   "Effect: For every 2 workers, reduce the cost of building- or space-tagged cards you play by 1 M€.": "效果：每有2个工人，你打出的建筑或太空标志牌减1 M€。",
   "${0} paid ${1} steel and added 1 worker to ${2}.": "${0} 支付了 ${1} 钢铁，并在 ${2} 上放置了1个工人。",
