--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -83,5 +83,12 @@
   "You start with 48 M€. As your first action, draw a floater card.": "起始获得48M€。作为第一个行动，抽一张云载体牌。",
   "Action: Move any number of floater resources from one floater card to another.": "行动：将任意数量的云从一张云载体牌移动到另一张云载体牌上。",
   "If the two cards have the same number of floater resources after moving, place 1 floater resource on each of these two cards.": "如果移动后两张牌上的云数量相同，则在这两张牌上各放置1个云。",
-  "equal": "相等"
+  "equal": "相等",
+
+  "Abnormal Titan": "奇行种巨人",
+  "ABNORMAL TITAN": "奇行种巨人",
+  "${0} triggered Abnormal Titan effect → draw (Total: Draw-${1} / Discard-${2} / Nothing-${3})": "${0} 触发奇行种巨人效果 → 抽牌（累计：抽-${1} / 弃-${2} / 无事-${3}）",
+  "${0} triggered Abnormal Titan effect → discard (Total: Draw-${1} / Discard-${2} / Nothing-${3})": "${0} 触发奇行种巨人效果 → 弃牌（累计：抽-${1} / 弃-${2} / 无事-${3}）",
+  "${0} triggered Abnormal Titan effect → nothing (Total: Draw-${1} / Discard-${2} / Nothing-${3})": "${0} 触发奇行种巨人效果 → 无事（累计：抽-${1} / 弃-${2} / 无事-${3}）",
+  "Effect: After playing a project card: 1/3 chance to draw a card, 1/3 chance to discard a card from hand, and 1/3 chance that nothing happens.": "效果：打出一张项目牌后：1/3 机率抽一张牌，1/3 机率从手牌弃一张牌，1/3 机率无事发生。"
 }
