--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -95,5 +95,11 @@
 
   "Void": "Void",
   "VOID": "VOID",
-  "You start with 70 M€.": "起始获得70M€。"
+  "You start with 70 M€.": "起始获得70M€。",
+
+  "Data Communication Center": "数据流通中心",
+  "DATA COMMUNICATION CENTER": "数据流通中心",
+  "You start with 42 M€ and 3 energy.": "起始获得42M€和3个电力资源。",
+  "Effect: Whenever your energy production increases or you spend energy, add 1 data to this card.": "效果：每当你的电力产量增加或你消耗电力时，在此卡上放置1个数据。",
+  "Effect: Whenever this card has at least 3 data, automatically remove 3 data to draw 1 card.": "效果：当此卡上至少有3个数据时，自动移除3个数据以抽1张牌。"
 }
